# proxy

./: .coverage  .env.example  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  PROJECT_STRUCTURE.md  README.md  claude-pick  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  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.pub  mein.save  nvidia_nim_models.json  pyproject.toml  requirements.txt  server.py
.claude/: GLOBAL_JOURNAL.md  IMPROVEMENT_SUGGESTIONS.md  STATE.md  agentd.sh  auto-resume.sh  checkpoint.sh  fast-start.sh  integrate.sh  resume.sh  settings.local.json
api/: __init__.py  app.py  dependencies.py  detection.py  models.py  optimization_handlers.py  request_utils.py  routes.py
bot/: telegram_bot.py
cli/: __init__.py  manager.py  parser.py  session.py
config/: logging_config.py  nim.py  settings.py
docs/: CONTEXT_PRESERVATION_BUGS.md  PHASE1_GOLANG_PLAN.md  RESOURCE_OPTIMIZATION_PLAN.md
messaging/: __init__.py  base.py  commands.py  discord.py  discord_markdown.py  event_parser.py  factory.py  handler.py  limiter.py  models.py  queue.py  rate_limited_platform.py  rate_limiter.py  session.py  telegram.py  telegram_markdown.py  transcript.py  transcription.py  tree_data.py  tree_processor.py  tree_queue.py  tree_repository.py
providers/: __init__.py  base.py  claude_cli.py  cli_session_manager.py  exceptions.py  logging_utils.py  message_queue.py  model_utils.py  nvidia_mixins.py  nvidia_nim.py  openai_compat.py  rate_limit.py  session_store.py
scripts/: check_gmail.py
tests/: conftest.py  test_api.py  test_app_lifespan_and_errors.py  (+44 more)
(+82 files in other folders)
